--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.link {
+  text-decoration: none;
+}
+
 /*----------------------- NAVBAR -----------------------*/
 
 .logo{
@@ -20,6 +24,9 @@
 
 .navbar_items li{
   padding: 0px 3rem;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 /*----------------------- HOME -----------------------*/
@@ -34,7 +41,7 @@
 }
 
 .home-content{
-  width: 35rem;
+  width: 40rem;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -42,14 +49,16 @@
 }
 
 .home-content h1{
-  font-size: 4.8rem;
+  font-size: 4.5rem;
+  line-height: 4.5rem;
   margin: 0 0;
-  color: hsl(357, 68%, 59%);
+  color: hsl(7, 92%, 60%);
 }
 
 .home-content h2{
   font-size: 2rem;
   color: black;
+  margin-bottom: 0;
 }
 
 .home-content p{
@@ -73,7 +82,6 @@ font-weight: 700;
   padding: 2rem 6rem;
   background-color: hsla(357, 63%, 57%, 0.95);
 }
-
 
 
 .countries_container{
@@ -107,6 +115,15 @@ padding: 0.3rem 1rem;
 border-radius: 10px;
 }
 
+
+.pagination{
+  background-color: hsla(357, 63%, 57%, 0.95);
+  height: 6rem ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 20px;
+}
 /*----------------------- COUNTRY -----------------------*/
 .country_item{
   height: 55rem;
